--- a/ros.Data/ros.Data/ros.Data.csproj
+++ b/ros.Data/ros.Data/ros.Data.csproj
@@ -30,8 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +51,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Boat.cs" />
+    <Compile Include="Models\Club.cs" />
+    <Compile Include="Models\ContactAddress.cs" />
+    <Compile Include="Models\ContactPerson.cs" />
+    <Compile Include="Models\ContactType.cs" />
+    <Compile Include="Models\C__MigrationHistory.cs" />
+    <Compile Include="Models\Entry.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\RaceEvent.cs" />
+    <Compile Include="Models\JunctionTables\RaceEventTeam.cs" />
+    <Compile Include="Models\Regatta.cs" />
+    <Compile Include="Models\JunctionTables\RegattaEntry.cs" />
+    <Compile Include="Models\RegisteredUser.cs" />
+    <Compile Include="Models\JunctionTables\RegisteredUserSocialEvent.cs" />
+    <Compile Include="Models\Result.cs" />
+    <Compile Include="Models\RosContext.cs" />
+    <Compile Include="Models\SocialEvent.cs" />
+    <Compile Include="Models\Team.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
